Debug: fit to data: CompleteDiscrete2DBinaryMapping:dof attribute issue

--- a/NB01_NaiveLearning_PythonBasics.ipynb
+++ b/NB01_NaiveLearning_PythonBasics.ipynb
@@ -34,7 +34,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### Attempt Round 1"
    ]
@@ -43,7 +45,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -90,7 +93,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style=\"color:#006000\"><b>EXERCISE</b></span>\n",
     "In the cell below, experiment with the function `generate_all_X_space_samples` we just defined. You can manipulate the definition of the function  and  observe the change of its behaviour. "
@@ -99,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X_space = generate_all_X_space_samples()\n",
@@ -108,7 +115,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### Attempt Round 2"
    ]
@@ -116,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def generate_all_X_space_samples():\n",
@@ -151,7 +162,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style=\"color:#006000\"><b>EXERCISE</b></span>\n",
     "Experiment with the for loop above. Try to generate x spaces of different sizes. "
@@ -851,7 +864,8 @@
     "class CompleteDiscrete2DBinaryMapping(object):\n",
     "    def __init__(self, N):\n",
     "        self.grid_x = generate_all_X_space_samples_np(N)\n",
-    "        self.h_size = 2 ** (N**2)\n",
+    "        self.dof = N ** 2\n",
+    "        self.h_size = 2 ** self.dof\n",
     "        self.inconsistent_hypotheses = []\n",
     "        \n",
     "    def size(self):\n",
@@ -861,7 +875,7 @@
     "        X = np.array(X)\n",
     "        d = ((self.grid_x - X)**2).sum(axis=1)\n",
     "        bit_id = np.argmin(d)\n",
-    "        format_string = \"{:0\" + str(self.dof**2) + \"b}\"\n",
+    "        format_string = \"{:0\" + str(self.dof) + \"b}\"\n",
     "        y = int(format_string.format(hypothesis_id) [bit_id])\n",
     "        return y\n",
     "    \n",
@@ -911,6 +925,15 @@
     "]\n",
     "Y_trn = [0, 0, 1, 1, 1, 1]\n",
     "complete_model.fit(X_trn, Y_trn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_model.predict_according_to_hypothesis((0,2), 3)"
    ]
   },
   {
