Add drafting rule; Fixed typo and add specification in notebook

--- a/NB01_NaiveLearning_PythonBasics.ipynb
+++ b/NB01_NaiveLearning_PythonBasics.ipynb
@@ -1887,65 +1887,10 @@
     "\n",
     "| $N$ | $\\eta$ | $E_{in}^C $  | $E_{test}^C$ | $D^C$  | $E_{in}^S$  | $E_{test}^S$ | $D^S$  | \n",
     "|---|---|---|---|---|---|---|---|\n",
-    "| 40 | 0.1 | 0.000  |  0.413  | 0.413   | 0.202   | 0.321   | 0.124 |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# !Construction Zone!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(\n",
-    "    data=[go.Scatter(\n",
-    "        x=X_train[:, 0], \n",
-    "        y=X_train[:, 1], \n",
-    "        marker_color=y_train,\n",
-    "        marker_size=12,\n",
-    "        marker_line_width=2,\n",
-    "        mode=\"markers\")],\n",
-    "    layout_title_text=\"Quantized Simplified Iris Data\"\n",
-    ")\n",
-    "if COLAB:\n",
-    "    fig.show(renderer=\"colab\")\n",
-    "else:\n",
-    "    fig.show()\n",
-    "    \n",
-    "dt_complex = DecisionTreeClassifier(max_depth=20)\n",
-    "dt_complex.fit(X_train, y_train)\n",
+    "| 40 | 0.15 | 0.000  |  0.413  | 0.413   | 0.202   | 0.321   | 0.124 |\n",
     "\n",
-    "all_pred = dt_complex.predict(all_x)\n",
-    "fig = go.Figure(\n",
-    "    data=[go.Scatter(\n",
-    "        x=all_x[:, 0], \n",
-    "        y=all_x[:, 1], \n",
-    "        marker_color=all_pred,\n",
-    "        marker_size=12,\n",
-    "        marker_line_width=2,\n",
-    "        mode=\"markers\")],\n",
-    "    layout_title_text=\"Quantized Simplified Iris Data\"\n",
-    ")\n",
-    "if COLAB:\n",
-    "    fig.show(renderer=\"colab\")\n",
-    "else:\n",
-    "    fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"tmp.txt\", \"w\") as f:\n",
-    "    sklearn.tree.export_graphviz(dt_complex, f)"
+    "- $N$: number of training samples\n",
+    "- $\\eta$: noise level (probability that in a training sample $(x, y)$, $y$ happens to be the _incorrect_ label for $x$."
    ]
   }
  ],
@@ -1981,7 +1926,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
