Minor issue fix.

--- a/NB01_NaiveLearning_PythonBasics.ipynb
+++ b/NB01_NaiveLearning_PythonBasics.ipynb
@@ -2409,10 +2409,8 @@
    "execution_count": null,
    "metadata": {
     "code_folding": [
-     0,
      1,
-     7,
-     25
+     7
     ],
     "hidden": true
    },
@@ -2575,9 +2573,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "hidden": true
    },
    "outputs": [],
@@ -2730,7 +2726,7 @@
    "outputs": [],
    "source": [
     "first_perceptron.update(dw0=0, dw1=0, db=0.05, verbose=True)\n",
-    "# first_perceptron.set(w0=-0.02, w1=0.08, b=.0, verbose=True)\n",
+    "# first_perceptron.set_param(w0=-0.02, w1=0.08, b=.0, verbose=True)\n",
     "show_perceptron_model(first_perceptron, X_easy, y_easy)"
    ]
   },
@@ -2800,7 +2796,7 @@
    "outputs": [],
    "source": [
     "perceptron_on_train = MyPerceptron2D()\n",
-    "show_perceptron_model(first_perceptron, X_easy, y_easy)"
+    "show_perceptron_model(perceptron_on_train, X_easy, y_easy)"
    ]
   },
   {
@@ -2879,9 +2875,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "hidden": true
    },
    "outputs": [],
