--- a/NB01_NaiveLearning_PythonBasics.ipynb
+++ b/NB01_NaiveLearning_PythonBasics.ipynb
@@ -2894,7 +2894,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# 4 Bias-variance Ballance, Bootstrapping and Boosting (BBBB)"
+    "# 4 Bias-variance Ballance and Bootstrapping (BBB)"
    ]
   },
   {
@@ -2908,27 +2908,16 @@
     "# Environment and constant preparation\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "from PIL import Image\n",
-    "from sklearn.model_selection import train_test_split\n",
     "try:\n",
     "    import plotly.graph_objects as go\n",
     "    import plotly.express as px\n",
     "except:\n",
     "    !pip install plotly==4.1.0\n",
     "import matplotlib.pyplot as plt\n",
-    "import torchvision.datasets as cvdata\n",
-    "import torchvision.transforms as transforms\n",
-    "from pathlib import Path\n",
     "import torch\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import scipy.stats as ss\n",
-    "import pandas as pd\n",
-    "\n",
-    "DATA_FOLDER = Path(\"./data\").absolute()\n",
-    "DATA_FOLDER.mkdir(parents=True, exist_ok=True)\n",
-    "DATA_FOLDER = str(DATA_FOLDER)\n",
-    "COLAB = False\n",
-    "IRIS_EXPERIMENT_X_SPACE_QUANTISATION_BIN_NUM = 50 # self-interpretation"
+    "import pandas as pd"
    ]
   },
   {
@@ -3188,9 +3177,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     1
-    ],
+    "code_folding": [],
     "hidden": true
    },
    "outputs": [],
@@ -3201,7 +3188,8 @@
     "        y_a = gnd(x_a).squeeze()\n",
     "        self.ground_truth_scatter_trace = \\\n",
     "            go.Scatter(x=x_a.squeeze(), y=y_a, \n",
-    "                       mode=\"lines\", name=\"Ground-truth\", \n",
+    "                       mode=\"lines\", \n",
+    "                       name=\"Ground-truth\", \n",
     "                       line=dict(color='rgba(0.1, 0.0, 0.4)', width=5),\n",
     "                      )\n",
     "        \n",
