Learning materials added to selected Deep learning topics

--- a/NB03_NeuralNets.ipynb
+++ b/NB03_NeuralNets.ipynb
@@ -1321,9 +1321,11 @@
       "metadata": {
         "id": "2uHIlOW9Knuo",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "import os\n",
         "import sys\n",
         "from contextlib import ExitStack, suppress, redirect_stdout, redirect_stderr\n",
@@ -1731,9 +1733,11 @@
       "metadata": {
         "id": "Mmv-O0uAP-Lt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "########################################\n",
         "# Advanced logger\n",
         "import numpy as np\n",
@@ -1912,6 +1916,8 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as fn\n",
+        "import PIL\n",
+        "from PIL.Image import Image\n",
         "from torchvision.datasets import MNIST, CIFAR10\n",
         "from torch.utils.data.dataloader import DataLoader\n",
         "from torch.utils.data.dataset import Subset\n",
@@ -2116,6 +2122,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uWnQyXE7f5wu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Paper: [link](http://vision.stanford.edu/cs598_spring07/papers/Lecun98.pdf); [link-2](http://yann.lecun.com/exdb/publis/pdf/lecun-99.pdf)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -2174,6 +2190,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y9u7gmeIgKsZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "ResNet Paper: [link](https://arxiv.org/abs/1512.03385)\n",
+        "\n",
+        "Tutorial Video:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OMzmK8qthEbx",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('XPpmzulEmjA', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -2217,6 +2261,36 @@
       "source": [
         "### 2.1.5 Essentials: Optimiser"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "yuPwiKwcn7is"
+      },
+      "source": [
+        "Adam Paper: [link](https://arxiv.org/abs/1412.6980)\n",
+        "\n",
+        "Overview tutorial: [link](http://ruder.io/optimizing-gradient-descent/)\n",
+        "\n",
+        "Tutorial Video:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "both",
+        "id": "31nds35un2i-",
+        "colab": {}
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('JXQT_vxqwIs', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2281,6 +2355,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "qLwjySWKpFLs"
+      },
+      "source": [
+        "BatchNorm Paper: [link](https://arxiv.org/abs/1502.03167)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -2329,6 +2413,31 @@
       "source": [
         "### 2.1.7 Essentials: Regularisation by Dropout"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q7hKjmPDpbDq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Paper [link](http://jmlr.org/papers/volume15/srivastava14a.old/srivastava14a.pdf)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qSg0JrYnpRWu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('vAVOY8frLlQ', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2634,19 +2743,6 @@
       "source": [
         "L.backward()\n",
         "del x0, x1, L # explicitly remove those variables lest confusion"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UDdqMP_YOwS0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
