Minor bug fixes; tutorial videos.

--- a/NB03_NeuralNets.ipynb
+++ b/NB03_NeuralNets.ipynb
@@ -42,7 +42,9 @@
         "q8U9gwapUCbh",
         "GBSmMDUNUCb0",
         "svbJbpJ1UCb3",
-        "yGh3huCtUCb7"
+        "yGh3huCtUCb7",
+        "_4wsU1KXtHst",
+        "ogNi_SkVtHs0"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -2207,7 +2209,7 @@
       "metadata": {
         "id": "OMzmK8qthEbx",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -3760,6 +3762,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "LBuREKX2lUDb",
+        "colab_type": "text"
+      },
+      "source": [
+        "What are GAN models? What the tutorial video below."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2-tN2x4wkJLV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('PhCM3qoRZHE', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "heading_collapsed": true,
         "id": "_4wsU1KXtHst",
         "colab_type": "text"
@@ -4082,7 +4109,7 @@
         "# Allocate an optimiser for model_g\n",
         "optim_g = Adam(model_g.parameters(), lr=1e-4)\n",
         "\n",
-        "\n",
+        "fig = visualise_pdf(x_grid, pdf_fn(x_grid), show=False)\n",
         "for i in range(MAX_TRAIN):\n",
         "    optim_g.zero_grad()\n",
         "    # take a new set of random inputs\n",
@@ -4140,9 +4167,9 @@
       "source": [
         "There is an obvious problem in the above solution:\n",
         "\n",
-        "> The high-probability strategy drives the generator to push all the samples into the area with highest pop ability density,  which makes since only from a local view. Globally the samples generated are very different from the true population of the data.\n",
+        "> The high-probability strategy drives the generator to push all the samples into the area with highest probability density,  which makes sense only from a local view. Globally the samples generated are very different from the true population of the data.\n",
         "\n",
-        "A natural solution is to introduce our counter mechanism,  we want the samples generated cannot be easily distinguished from the true population.\n",
+        "A natural solution is to introduce our counter mechanism,  we do not want the samples produced by the generator to be easily distinguished from the true population.\n",
         "\n",
         "To put it formally, the current problem is that, when the \"counterfeiter\" puts all effort in optimising the $p(x)$ it generates, we will have different\n",
         "$p(x|TrueData)$ and $p(x|FakeData)$. The formal way of stating \"true and false data are easily distinguished\" is that the _posterior probabilities_\n",
@@ -4526,7 +4553,7 @@
       "source": [
         "class DiscriminatorVanilla(nn.Module):\n",
         "    def __init__(self, hidden_units=2):\n",
-        "        super(Discriminator, self).__init__()\n",
+        "        super(DiscriminatorVanilla, self).__init__()\n",
         "        self.lin1 = nn.Linear(in_features=1, out_features=hidden_units)\n",
         "        self.lin2 = nn.Linear(in_features=hidden_units, out_features=1)\n",
         "        \n",
@@ -4537,7 +4564,7 @@
         "    \n",
         "class GeneratorVanilla(nn.Module):\n",
         "    def __init__(self, hidden_units):\n",
-        "        super(Generator, self).__init__()\n",
+        "        super(GeneratorVanilla, self).__init__()\n",
         "        self.lin1 = nn.Linear(in_features=1, out_features=hidden_units)\n",
         "        self.lin2 = nn.Linear(in_features=hidden_units, out_features=1)\n",
         "        \n",
@@ -4550,7 +4577,7 @@
         "# W-GAN    \n",
         "class Discriminator(nn.Module):\n",
         "    def __init__(self, hidden_units=4):\n",
-        "        super(FakeDensityEstimator, self).__init__()\n",
+        "        super(Discriminator, self).__init__()\n",
         "        self.lin1 = nn.Linear(in_features=1, out_features=hidden_units)\n",
         "        self.lin2 = nn.Linear(in_features=hidden_units, \n",
         "                              out_features=hidden_units)\n",
@@ -4614,8 +4641,38 @@
         "[[tutorial](https://wiseodd.github.io/techblog/2017/02/04/wasserstein-gan/)]\n",
         "[[tutorial-more-background](https://paper.dropbox.com/doc/Wasserstein-GAN-GvU0p2V9ThzdwY3BbhoP7)]\n",
         "\n",
-        "[tutorial-video]\n"
+        "Below are two more videos, one from the original GAN inventor, and the other talks about other generative models.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tI59RE5jleFA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('9JpdAg6uMXs', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CqpWXQCslxNM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title\n",
+        "from IPython.display import YouTubeVideo\n",
+        "YouTubeVideo('9zKuYvjFFS8', width=600, height=400)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
