Image style transfer example added.

--- a/NB03_NeuralNets.ipynb
+++ b/NB03_NeuralNets.ipynb
@@ -36,15 +36,62 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
+        "3w52ilutUCa5",
+        "rh48fEPwUCa6",
         "wVUTU9rjUCa6",
         "Zs6JSG2dUCa9",
+        "lAxot3-VUCa-",
+        "4wg130tRUCbA",
+        "WN8l4UDyUCbB",
+        "9m0DJ9TmUCba",
         "JO5I6XORUCbb",
         "q8U9gwapUCbh",
+        "obHRTA-LUCbr",
+        "mqe4e5ZBUCbu",
+        "tsgt_1wgUCb0",
         "GBSmMDUNUCb0",
         "svbJbpJ1UCb3",
         "yGh3huCtUCb7",
+        "y0cg1cTUUCb_",
+        "o6aqq8Q_OwSr",
+        "62kdUcZIRE4f",
+        "BaEMt2-gVIWn",
+        "QpVmM4E9MZmf",
+        "io13HbPWKvX1",
+        "03GP-XBAsqVi",
+        "7shEN2Bts0Lj",
+        "R83yfC35ujmN",
+        "5oURQPW91Z9S",
+        "416FAJSM4szG",
+        "vtkCPCzh85fz",
+        "kDcbA2g37nF2",
+        "R4n7dCkr-dYo",
+        "_evAuXycOwSr",
+        "80iOyHdoOwSv",
+        "vmk-ebdTOwS3",
+        "DhA0aeIrVnTi",
+        "5RlJvHgkZ2V-",
+        "WuGE_KsBZ66U",
+        "R4r-4x4WljfM",
+        "4v_YEjH_tHsi",
+        "HxYFMQeztHsj",
+        "2v2uPcSrtHsn",
+        "ZUx-i01AtHsq",
+        "04p2-T_StHss",
         "_4wsU1KXtHst",
-        "ogNi_SkVtHs0"
+        "ogNi_SkVtHs0",
+        "7j2ZGru1tHs1",
+        "cYLbhF28tHs3",
+        "h8jFF-tVtHs5",
+        "Q60I8p-VtHs-",
+        "h-4Fp2QwtHtA",
+        "Q1P6Rht2tHtC",
+        "Tfj0qsOTtHtC",
+        "mhNONNBetHtE",
+        "k-hNgEdntHtE",
+        "xxRN2mMftHtF",
+        "46E-VAMatHtG",
+        "9cnjbuxQclo2"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -3777,7 +3824,7 @@
         "colab": {}
       },
       "source": [
-        "#@title\n",
+        "#@GAN Introduction\n",
         "from IPython.display import YouTubeVideo\n",
         "YouTubeVideo('PhCM3qoRZHE', width=600, height=400)"
       ],
@@ -5204,6 +5251,255 @@
         "        print(f\"Iter {iters}, models saved.\")\n",
         "        # show(x_fake[0])\n",
         "    iters+=1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9cnjbuxQclo2",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3.3 Image Transformation GAN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ji67rRQrckO0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import functools\n",
+        "import os\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from PIL import Image\n",
+        "import torchvision.transforms as transforms\n",
+        "from torchvision.utils import make_grid\n",
+        "\n",
+        "image_transform = transforms.Compose([\n",
+        "            transforms.Resize((256, 256), Image.BICUBIC),\n",
+        "            transforms.ToTensor(),\n",
+        "            transforms.Normalize((0.5, 0.5, 0.5),\n",
+        "                                 (0.5, 0.5, 0.5))])\n",
+        "\n",
+        "to_pil = transforms.Compose([\n",
+        "    transforms.Normalize((-1.0, -1.0, -1.0), (2.0, 2.0, 2.0)),\n",
+        "    transforms.ToPILImage()])\n",
+        "\n",
+        "\n",
+        "def load_image(image_path):\n",
+        "    A_img = Image.open(image_path).convert('RGB')\n",
+        "    return image_transform(A_img).unsqueeze(0)\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# Defines the generator that consists of Resnet blocks between a few\n",
+        "# downsampling/upsampling operations.\n",
+        "# Code and idea originally from Justin Johnson's architecture.\n",
+        "# https://github.com/jcjohnson/fast-neural-style/\n",
+        "class ResnetGenerator(nn.Module):\n",
+        "    def __init__(self, input_nc, output_nc, ngf=64, norm_layer=nn.BatchNorm2d,\n",
+        "                 use_dropout=False, n_blocks=6, padding_type='reflect'):\n",
+        "        assert(n_blocks >= 0)\n",
+        "        super(ResnetGenerator, self).__init__()\n",
+        "        self.input_nc = input_nc\n",
+        "        self.output_nc = output_nc\n",
+        "        self.ngf = ngf\n",
+        "        if type(norm_layer) == functools.partial:\n",
+        "            use_bias = norm_layer.func == nn.InstanceNorm2d\n",
+        "        else:\n",
+        "            use_bias = norm_layer == nn.InstanceNorm2d\n",
+        "\n",
+        "        model = [nn.ReflectionPad2d(3),\n",
+        "                 nn.Conv2d(input_nc, ngf, kernel_size=7, padding=0,\n",
+        "                           bias=use_bias),\n",
+        "                 norm_layer(ngf),\n",
+        "                 nn.ReLU(True)]\n",
+        "\n",
+        "        n_downsampling = 2\n",
+        "        for i in range(n_downsampling):\n",
+        "            mult = 2**i\n",
+        "            model += [nn.Conv2d(ngf * mult, ngf * mult * 2, kernel_size=3,\n",
+        "                                stride=2, padding=1, bias=use_bias),\n",
+        "                      norm_layer(ngf * mult * 2),\n",
+        "                      nn.ReLU(True)]\n",
+        "\n",
+        "        mult = 2**n_downsampling\n",
+        "        for i in range(n_blocks):\n",
+        "            model += [ResnetBlock(ngf * mult, padding_type=padding_type, norm_layer=norm_layer, use_dropout=use_dropout, use_bias=use_bias)]\n",
+        "\n",
+        "        for i in range(n_downsampling):\n",
+        "            mult = 2**(n_downsampling - i)\n",
+        "            model += [nn.ConvTranspose2d(ngf * mult, int(ngf * mult / 2),\n",
+        "                                         kernel_size=3, stride=2,\n",
+        "                                         padding=1, output_padding=1,\n",
+        "                                         bias=use_bias),\n",
+        "                      norm_layer(int(ngf * mult / 2)),\n",
+        "                      nn.ReLU(True)]\n",
+        "        model += [nn.ReflectionPad2d(3)]\n",
+        "        model += [nn.Conv2d(ngf, output_nc, kernel_size=7, padding=0)]\n",
+        "        model += [nn.Tanh()]\n",
+        "\n",
+        "        self.model = nn.Sequential(*model)\n",
+        "\n",
+        "    def forward(self, input):\n",
+        "        return self.model(input)\n",
+        "\n",
+        "\n",
+        "# Define a resnet block\n",
+        "class ResnetBlock(nn.Module):\n",
+        "    def __init__(self, dim, padding_type, norm_layer, use_dropout, use_bias):\n",
+        "        super(ResnetBlock, self).__init__()\n",
+        "        self.conv_block = self.build_conv_block(dim, padding_type, norm_layer, use_dropout, use_bias)\n",
+        "\n",
+        "    def build_conv_block(self, dim, padding_type, norm_layer, use_dropout, use_bias):\n",
+        "        conv_block = []\n",
+        "        p = 0\n",
+        "        if padding_type == 'reflect':\n",
+        "            conv_block += [nn.ReflectionPad2d(1)]\n",
+        "        elif padding_type == 'replicate':\n",
+        "            conv_block += [nn.ReplicationPad2d(1)]\n",
+        "        elif padding_type == 'zero':\n",
+        "            p = 1\n",
+        "        else:\n",
+        "            raise NotImplementedError('padding [%s] is not implemented' % padding_type)\n",
+        "\n",
+        "        conv_block += [nn.Conv2d(dim, dim, kernel_size=3, padding=p, bias=use_bias),\n",
+        "                       norm_layer(dim),\n",
+        "                       nn.ReLU(True)]\n",
+        "        if use_dropout:\n",
+        "            conv_block += [nn.Dropout(0.5)]\n",
+        "\n",
+        "        p = 0\n",
+        "        if padding_type == 'reflect':\n",
+        "            conv_block += [nn.ReflectionPad2d(1)]\n",
+        "        elif padding_type == 'replicate':\n",
+        "            conv_block += [nn.ReplicationPad2d(1)]\n",
+        "        elif padding_type == 'zero':\n",
+        "            p = 1\n",
+        "        else:\n",
+        "            raise NotImplementedError('padding [%s] is not implemented' % padding_type)\n",
+        "        conv_block += [nn.Conv2d(dim, dim, kernel_size=3, padding=p, bias=use_bias),\n",
+        "                       norm_layer(dim)]\n",
+        "\n",
+        "        return nn.Sequential(*conv_block)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        out = x + self.conv_block(x)\n",
+        "        return out\n",
+        "\n",
+        "def create_generator():\n",
+        "    norm_layer = functools.partial(nn.InstanceNorm2d, affine=False,\n",
+        "                                   track_running_stats=True)\n",
+        "    netG = ResnetGenerator(3, 3, 64, norm_layer=norm_layer, use_dropout=False,\n",
+        "                           n_blocks=9)\n",
+        "    return netG\n",
+        "\n",
+        "def get_trained_model_parameters(style):\n",
+        "    import urllib\n",
+        "    if not os.path.exists(\"checkpoints/\"):\n",
+        "        os.makedirs(\"checkpoints\")\n",
+        "    model_path = f\"checkpoints/style_{style}.pth\"\n",
+        "    if not os.path.exists(model_path):\n",
+        "        urllib.request.urlretrieve(\n",
+        "            \"http://efrosgans.eecs.berkeley.edu/cyclegan/pretrained_models/\"\n",
+        "            + 'style_' + style + \".pth\",\n",
+        "            model_path)\n",
+        "    return model_path\n",
+        "\n",
+        "def __patch_instance_norm_state_dict(state_dict, module, keys, i=0):\n",
+        "    key = keys[i]\n",
+        "    if i + 1 == len(keys):  # at the end, pointing to a parameter/buffer\n",
+        "        if module.__class__.__name__.startswith('InstanceNorm') and \\\n",
+        "                (key == 'running_mean' or key == 'running_var'):\n",
+        "            if getattr(module, key) is None:\n",
+        "                state_dict.pop('.'.join(keys))\n",
+        "        if module.__class__.__name__.startswith('InstanceNorm') and \\\n",
+        "           (key == 'num_batches_tracked'):\n",
+        "            state_dict.pop('.'.join(keys))\n",
+        "    else:\n",
+        "        __patch_instance_norm_state_dict(\n",
+        "            state_dict, getattr(module, key), keys, i + 1)\n",
+        "\n",
+        "def load_generator_from(netG, model_path):\n",
+        "    state_dict = torch.load(model_path)\n",
+        "    for key in list(\n",
+        "            state_dict.keys()):  # need to copy keys because we mutate in loop\n",
+        "        __patch_instance_norm_state_dict(state_dict, netG, key.split('.'))\n",
+        "    netG.load_state_dict(state_dict)\n",
+        "    return netG    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RUiQ4Iuojv2Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title Parameter setting\n",
+        "#@markdown Choose an artist's style to play with\n",
+        "style = \"vangogh\" #@param [\"cezanne\", \"monet\", \"ukiyoe\", \"vangogh\"] {allow-input: false}\n",
+        "#@markdown ---\n",
+        "model_path = get_trained_model_parameters(style)\n",
+        "image_transf_net = create_generator()\n",
+        "image_transf_net = load_generator_from(image_transf_net, model_path).to(device)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l_lKlszVsXCV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "input_image_fname = \"/content/sample_data/IMG_7933.JPG\"\n",
+        "assert os.path.exists(input_image_fname), \\\n",
+        "    (\"Image file does not exist, upload one and copy \"\n",
+        "     \"the path using the panel on left.\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qDjJae_ArWcB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Alternatively, you can make a selfy here 👩🏻🤳 :P"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yyh4ikuxkn_0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "im0 = load_image(input_image_fname).to(device)\n",
+        "im1 = image_transf_net(im0)\n",
+        "im_display = make_grid(torch.cat((im0, im1)).cpu())\n",
+        "to_pil(im_display)"
       ],
       "execution_count": 0,
       "outputs": []
