Improve progress report of CIFAR-GAN training

--- a/NB03_NeuralNets.ipynb
+++ b/NB03_NeuralNets.ipynb
@@ -71,27 +71,7 @@
         "vmk-ebdTOwS3",
         "DhA0aeIrVnTi",
         "5RlJvHgkZ2V-",
-        "WuGE_KsBZ66U",
-        "R4r-4x4WljfM",
-        "4v_YEjH_tHsi",
-        "HxYFMQeztHsj",
-        "2v2uPcSrtHsn",
-        "ZUx-i01AtHsq",
-        "04p2-T_StHss",
-        "_4wsU1KXtHst",
-        "ogNi_SkVtHs0",
-        "7j2ZGru1tHs1",
-        "cYLbhF28tHs3",
-        "h8jFF-tVtHs5",
-        "Q60I8p-VtHs-",
-        "h-4Fp2QwtHtA",
-        "Q1P6Rht2tHtC",
-        "Tfj0qsOTtHtC",
-        "mhNONNBetHtE",
-        "k-hNgEdntHtE",
-        "xxRN2mMftHtF",
-        "46E-VAMatHtG",
-        "9cnjbuxQclo2"
+        "WuGE_KsBZ66U"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -4895,7 +4875,7 @@
         "    [transforms.ToTensor(),\n",
         "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
         "\n",
-        "batch_size = 32\n",
+        "batch_size = 4\n",
         "\n",
         "trainset = torchvision.datasets.CIFAR10(\n",
         "    root='./data', train=True,\n",
@@ -5109,7 +5089,7 @@
         "dnet = DNet_CIFAR(basic_channels=g_basic_channels).to(device) # device detected in preparation above\n",
         "gnet = GNet_CIFAR(basic_channels=g_basic_channels,\n",
         "                  noise_dim=g_noise_dim).to(device)\n",
-        "learning_rate = 1e-4\n",
+        "learning_rate = 5e-5\n",
         "optim_discrim = Adam(dnet.parameters(), lr=learning_rate)\n",
         "optim_gen = Adam(gnet.parameters(), lr=learning_rate)"
       ],
@@ -5230,18 +5210,33 @@
         "colab": {}
       },
       "source": [
+        "from tqdm import tqdm\n",
+        "import sys\n",
         "from IPython.display import Image, display\n",
         "iters = 0\n",
-        "while iters<15000:\n",
-        "    loss_dis = train_discrim()\n",
-        "    loss_gen, x_fake = train_gen()\n",
-        "    \n",
-        "    if iters % 100==0:\n",
-        "        print(\"{:d} steps: Loss D: {:.3f} G: {:.3f} +:{:.3f}\".format(\n",
-        "            iters, loss_dis, loss_gen, loss_dis+loss_gen\n",
-        "        ))\n",
         "\n",
-        "    if iters % 1000 == 0:\n",
+        "report_counter = 0\n",
+        "while iters<100000:\n",
+        "    # progress report\n",
+        "    \n",
+        "    \n",
+        "\n",
+        "    with tqdm(total=100, file=sys.stdout) as pbar:\n",
+        "        for sub_iters in range(100):\n",
+        "            loss_dis = train_discrim()\n",
+        "            loss_gen, x_fake = train_gen()\n",
+        "            iters+=1\n",
+        "            tmp_s = loss_dis+loss_gen\n",
+        "            pbar.set_description(f\"Iter: {iters} Loss D: {loss_dis:.3f} G: {loss_gen:.3f} +:{tmp_s:.3f}\")\n",
+        "            pbar.update(1)\n",
+        "            if iters % 100 == 1:\n",
+        "                torchvision.utils.save_image(x_fake, \"tmp.png\", normalize=True)\n",
+        "                display(Image(filename=\"tmp.png\"))\n",
+        "\n",
+        "\n",
+        "    print(f\"Iter: {iters} Loss D: {loss_dis:.3f} G: {loss_gen:.3f} +:{tmp_s:.3f}\")\n",
+        "    report_counter += 1\n",
+        "    if report_counter >= 10:\n",
         "        torch.save(dnet.state_dict(), f\"./checkpoints/D{iters:06d}.pt\")\n",
         "        torch.save(dnet.state_dict(), f\"./checkpoints/G{iters:06d}.pt\")\n",
         "        torchvision.utils.save_image(x_fake, \n",
@@ -5249,8 +5244,8 @@
         "                                     normalize=True)\n",
         "        display(Image(filename=f\"./checkpoints/gen{iters:06d}.png\"))\n",
         "        print(f\"Iter {iters}, models saved.\")\n",
-        "        # show(x_fake[0])\n",
-        "    iters+=1"
+        "        report_counter = 0\n",
+        "    "
       ],
       "execution_count": 0,
       "outputs": []
@@ -5462,12 +5457,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4SELU-NaMLsm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "l_lKlszVsXCV",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "input_image_fname = \"/content/sample_data/IMG_7933.JPG\"\n",
+        "input_image_fname = \"IMG_7933.JPG\"\n",
         "assert os.path.exists(input_image_fname), \\\n",
         "    (\"Image file does not exist, upload one and copy \"\n",
         "     \"the path using the panel on left.\")"
@@ -5491,8 +5499,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yyh4ikuxkn_0",
         "colab_type": "code",
+        "id": "GM9P3ZN83jSQ",
         "colab": {}
       },
       "source": [
